// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 12.199000000000002,
        "borderWidth": 1.1,
        "elevation": 0,
        "flexDirection": "row",
        "height": 36.597,
        "justifyContent": "center",
        "width": 36.597,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "flex",
            "fontSize": 19.738400000000002,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.5394000000000005,
            "color": "#aaa",
            "display": "flex",
            "fontSize": 12.199000000000002,
            "left": 7.5394000000000005,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#323031",
        "borderColor": "#323031",
        "borderRadius": 12.199000000000002,
        "borderWidth": 1.1,
        "elevation": 1.7798000000000003,
        "flexDirection": "row",
        "height": 36.597,
        "justifyContent": "center",
        "width": 36.597,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fefefe",
            "display": "flex",
            "fontSize": 19.738400000000002,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.5394000000000005,
            "color": "#fefefe",
            "display": "flex",
            "fontSize": 12.199000000000002,
            "left": 7.5394000000000005,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 12.199000000000002,
        "borderWidth": 0,
        "elevation": 0,
        "flexDirection": "row",
        "height": 36.597,
        "justifyContent": "center",
        "width": 36.597,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fefefe",
          "borderColor": "#aaa",
          "borderRadius": 12.199000000000002,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 36.597,
          "justifyContent": "center",
          "width": 36.597,
        }
      }
    />
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 12.199000000000002,
        "borderWidth": 1.1,
        "elevation": 0,
        "flexDirection": "row",
        "height": 36.597,
        "justifyContent": "center",
        "width": 36.597,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "flex",
            "fontSize": 19.738400000000002,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.5394000000000005,
            "color": "#aaa",
            "display": "flex",
            "fontSize": 12.199000000000002,
            "left": 7.5394000000000005,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fefefe",
        "borderColor": "#aaa",
        "borderRadius": 12.199000000000002,
        "borderWidth": 1.1,
        "elevation": 0,
        "flexDirection": "row",
        "height": 36.597,
        "justifyContent": "center",
        "width": 36.597,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#aaa",
            "display": "none",
            "fontSize": 19.738400000000002,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "bottom": 7.5394000000000005,
            "color": "#aaa",
            "display": "none",
            "fontSize": 12.199000000000002,
            "left": 7.5394000000000005,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
